# ForumSite

./: .gitignore  all_code_in_txt.txt  db.sqlite3  get_code_from_files_to_txt.py  manage.py  pyproject.toml
SettingsForum/: asgi.py  settings.py  urls.py  wsgi.py
forum/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_alter_message_image.py  0002_profile_topics_views.py  0002_rename_question_chat.py  0003_alter_message_image.py  0003_chat_author.py  0003_topic_image.py  0004_alter_message_author_alter_message_image_and_more.py  0004_alter_topic_discription.py  0004_rename_chapter_topic_chapter_model_chapter_topics.py  0005_alter_chapter_icon_img.py  0005_remove_profile_topics.py  0005_rename_chapter_model_topic_chapter_and_more.py  0006_alter_chapter_icon_img.py  0006_message_topic_alter_message_image_alter_message_time.py  0007_alter_chapter_icon_img.py  0007_alter_message_image.py  0008_alter_chapter_icon_img.py  0008_alter_message_image.py  0009_alter_chapter_icon_img.py  0010_remove_chapter_topics_topic_chapter.py  0011_question.py  0012_alter_question_text_question.py  0013_remove_message_topic_remove_views_topic_and_more.py
forum/static/css/: base.css
forum/static/js/: text_bar.js
forum/templates/auth/: login.html  logout.html  profile.html  registration.html  update_profile.html
forum/templates/card/: base.html  chapter_detail.html  delete_message.html  main.html  question_detail.html  topic_detail.html
