[tool.poetry]
name = "forumsite"
version = "0.1.0"
description = ""
authors = ["Marvelous-A <mogneto.r@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-debug-toolbar = "^4.3.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
